# crypto-fl

./: .gitignore  CHANGELOG.md  Makefile  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: ci.yml  package.yml  publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/darkbio_crypto_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
example/lib/: main.dart
ios/: darkbio_crypto.podspec
lib/: argon2.dart  cbor.dart  cose.dart  cwt.dart  darkbio_crypto.dart  hkdf.dart  rand.dart  rsa.dart  stream.dart  xdsa.dart  xhpke.dart
lib/src/: frb_prefixed_binding.dart
lib/src/rust/: frb_generated.dart
linux/: CMakeLists.txt
macos/: darkbio_crypto.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: argon2.rs  cbor.rs  cose.rs  cwt.rs  hkdf.rs  mod.rs  rand.rs  rsa.rs  stream.rs  xdsa.rs  xhpke.rs
scripts/: prefix_frb_symbols.dart  prefix_frb_symbols.sh
windows/: CMakeLists.txt
