[package]
name = "darkbio_crypto_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
darkbio-crypto = { version = "0.11.4", features = ["argon2", "cbor", "cose", "hkdf", "rand", "rsa", "stream", "xdsa", "xhpke"] }
flutter_rust_bridge = "=2.11.1"
hex = "0.4"

[profile.release]
lto = true
opt-level = "z"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
