[package]
name = "darkbio_crypto_ffi"
version = "0.13.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
darkbio-crypto = { version = "0.13.0", features = ["argon2", "cbor", "cose", "cwt", "hkdf", "rand", "rsa", "stream", "x509", "xdsa", "xhpke"] }
flutter_rust_bridge = "=2.11.1"
hex = "0.4"

[profile.release]
lto = true
opt-level = "z"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
